--- a/force-app/main/default/classes/StripeSubscriptionTriggerHandler.cls
+++ b/force-app/main/default/classes/StripeSubscriptionTriggerHandler.cls
@@ -1,18 +1,34 @@
+/**
+ * -----------------------------------------------------------------------------
+ * DESCRIPTION : Trigger Handler for Stripe Subscription operations
+ *
+ * AUTHOR      : Brian Premo
+ * CREATED     : 2025-06-12
+ * LAST EDITED :
+ *
+ * VERSION     : 1.0.0
+ *
+ * CHANGE LOG  :
+ *  - 2025-06-07 v1.0.0 Initial creation
+ * -----------------------------------------------------------------------------
+ */
 public with sharing class StripeSubscriptionTriggerHandler {
   public static void afterInsert(List<Stripe_Subscription__c> newList) {
     List<Stripe_Subscription__c> subscriptionsToUpdate = new List<Stripe_Subscription__c>();
 
     for (Stripe_Subscription__c subscription : newList) {
-      try {
-        // Call the Stripe API to create the customer
-        System.enqueueJob(
-          new CreateStripeSubscriptionQueuable(subscription.Id)
-        );
-      } catch (Exception e) {
-        System.debug('Error creating Stripe customer: ' + e.getMessage());
+      if (TriggerBypass.bypassStripeSubscription == false) {
+        try {
+          // Call the Stripe API to create the customer
+          System.enqueueJob(
+            new CreateStripeSubscriptionQueuable(subscription.Id)
+          );
+        } catch (Exception e) {
+          System.debug('Error creating Stripe customer: ' + e.getMessage());
+        }
       }
+      update subscriptionsToUpdate;
     }
-    update subscriptionsToUpdate;
   }
 
   /*
@@ -30,8 +46,8 @@ public with sharing class StripeSubscriptionTriggerHandler {
       //Handle Price ID changes
       if (
         oldSubscription != null &&
-        oldSubscription.Price_ID__c != null &&
-        oldSubscription.Price_ID__c != subscription.Price_ID__c
+        oldSubscription.Price_ID__c != subscription.Price_ID__c &&
+        TriggerBypass.bypassStripeSubscription == false
       ) {
         System.enqueueJob(
           new UpdateStripeSubscriptionQueuable(subscription.Id, 'update')
