--- a/force-app/main/default/classes/StripeCustomerTriggerHandler.cls
+++ b/force-app/main/default/classes/StripeCustomerTriggerHandler.cls
@@ -1,3 +1,17 @@
+/**
+ * -----------------------------------------------------------------------------
+ * DESCRIPTION : Queueable class to perform asynchronous processing of Stripe Checkout Session creation
+ *
+ * AUTHOR      : Brian Premo
+ * CREATED     : 2025-06-05
+ *
+ * VERSION     : 1.0.0
+ *
+ * CHANGE LOG  :
+ *  - 2025-06-05 v1.0.0 Initial creation
+ *  - 2025-06-14 v1.0.1 Added logic to prevent recursion by bypassing triggers
+ * -----------------------------------------------------------------------------
+ */
 public with sharing class StripeCustomerTriggerHandler {
   /*
   description: afterInsert method to handle the creation of Stripe customers by calling the Stripe API via a Queueable class.
@@ -7,17 +21,19 @@ public with sharing class StripeCustomerTriggerHandler {
     List<Stripe_Customer__c> customersToUpdate = new List<Stripe_Customer__c>();
 
     for (Stripe_Customer__c customer : newList) {
-      try {
-        // Create a Stripe customer using the Stripe API client
-        StripeCustomerWrapper.CustomerRequest customerRequest = new StripeCustomerWrapper.CustomerRequest();
-        customerRequest.name = customer.Name;
-        customerRequest.email = customer.Email__c;
-        customerRequest.phone = customer.Phone__c;
+      if (TriggerBypass.bypassStripeCustomer == false) {
+        try {
+          // Create a Stripe customer using the Stripe API client
+          StripeCustomerWrapper.CustomerRequest customerRequest = new StripeCustomerWrapper.CustomerRequest();
+          customerRequest.name = customer.Name;
+          customerRequest.email = customer.Email__c;
+          customerRequest.phone = customer.Phone__c;
 
-        // Call the Stripe API to create the customer
-        System.enqueueJob(new CreateStripeCustomerQueuable(customer.Id));
-      } catch (Exception e) {
-        System.debug('Error creating Stripe customer: ' + e.getMessage());
+          // Call the Stripe API to create the customer
+          System.enqueueJob(new CreateStripeCustomerQueuable(customer.Id));
+        } catch (Exception e) {
+          System.debug('Error creating Stripe customer: ' + e.getMessage());
+        }
       }
     }
     update customersToUpdate;
